--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    margin-left: 10%;
+    margin-right: 10%;
+    
 }
 ol, ul {
 	list-style: none;
@@ -64,6 +67,24 @@ h1, h2, h3, h4, h5 {
 
 p {
     line-height: 1.4;
+}
+
+body nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    
+}
+
+.LineBrkImg {
+    width: 100%;
 }
 
 .container {
