--- a/css/index.css
+++ b/css/index.css
@@ -30,8 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 800px;
+    margin: 0 auto;
     
 }
 ol, ul {
@@ -73,8 +73,9 @@ body nav {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    margin-right: 5%;
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 nav a {
@@ -85,6 +86,7 @@ nav a {
 
 .LineBrkImg {
     width: 100%;
+    margin-bottom: 2%;
 }
 
 .container {
