--- a/css/index.css
+++ b/css/index.css
@@ -86,7 +86,7 @@ nav a {
 
 .LineBrkImg {
     width: 100%;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
 }
 
 .container {
@@ -113,6 +113,7 @@ nav a {
     border-bottom: 1px dashed black;
 }
 
+
 .middle-content h2 {
     padding: 0 2%;
     margin-bottom: 0;
@@ -127,12 +128,52 @@ nav a {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
+    background-color: black;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#b1{
+    background: teal;
+}
+
+#b2 {
+    background: gold;
+}
+
+#b3 {
+    background: cadetblue;
+}
+
+#b4 {
+    background: coral;
+}
+
+#b5 {
+    background: crimson;
+}
+
+#b6 {
+    background: forestgreen;
+}
+
+#b7 {
+    background: darkorchid;
+}
+
+#b8 {
+    background: hotpink;
+}
+
+#b9 {
+    background: indigo;
+}
+
+#b10 {
+    background: dodgerblue;
 }
 
 .bottom-content {
@@ -167,3 +208,4 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
