--- a/css/about.css
+++ b/css/about.css
@@ -101,8 +101,40 @@ nav a {
     padding-bottom: 20px;
 }
 
+.MiddleTable {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
+}
 
+.MiddleContent {
+    padding-bottom: 20px;
+    border-bottom: 1px dashed black;
+    width: 46%;
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+
+.MiddleContent h3 {
+    margin-top: 15px;
+}
+
+.LearnMore {
+    background: white;
+    border: 1.5px solid black;
+    border-radius: 8px;
+    margin-top: 15px;
+    height: 35px;
+    width: 120px;
+    font-size: 14px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.BottomContent {
+    margin: 2%;
+    margin-bottom: 5%;
+}
 
 footer {
     width: 100%;
